--- a/frontend/src/Landing.css
+++ b/frontend/src/Landing.css
@@ -1,3 +1,16 @@
+.scroll-container{
+  scroll-snap-type: y mandatory;
+}
+.scroll-child{
+  scroll-snap-align: start;
+  height: 40rem;
+}
+
+.scroll-container,
+.scroll-child {
+  max-width: 100vw ;
+}
+
 /* Landing Page Styling */
 .font-header{
     font-family: "Inter", sans-serif;
@@ -18,8 +31,11 @@
     color: var(--primary-green);
 }
 
-.font-item-translate {
-    transform: translateX(150px);
+.font-item-translate1 {
+    transform: translateX(13rem);
+  }
+  .font-item-translate2 {
+    transform: translateX(8rem);
   }
 
 .landing-page {
@@ -43,7 +59,8 @@
     align-items: center;
     justify-content: space-evenly;
     padding: 120px 30px 30px 30px;
-    margin-top: 320px;
+    margin-top: 20rem;
+    margin-bottom: 25rem;
   }
   .landing-section1 {
     display: flex;
@@ -86,17 +103,18 @@
   }
   .landing-taskpanel-header-pos {
     position: relative;
-    transform: translateX(-200px) translateY(-150px);
+    transform: translateX(-8rem) translateY(-14rem);
   }
 
 
   .landing-item-taskpanel-text {
-    text-align: left;
-    padding: 50px 0px 0px 150px;
-    width: 350px;
+    text-align: center;
+    margin: 4rem 0rem 2rem 5rem;
+    width: 40rem;
     font-weight: 300;
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     color: rgb(112, 112, 112);
+    transform: translateX(5rem);
   }
   .landing-logo {
     width: 400px;
@@ -117,10 +135,16 @@
   }
 
   .landing-tasks-image {
-    width: 500px;
-    height: 400px;
+    width: 34rem;
+    height: 30rem;
     position: relative;
     transform: translateX(100px) translateY(-75px);
+  }
+  .landing-timeblock-image{
+    width: 38rem;
+    height: 31rem;
+    position: relative;
+    transform: translateX(-4rem) translateY(-10rem);
   }
   
   .landing-roadmap-title {
