--- a/frontend/src/AccountSetting.css
+++ b/frontend/src/AccountSetting.css
@@ -5,6 +5,44 @@
     --primary-green: #34b487;
 }
 
+.input-row{
+  display: flex;
+  flex-direction: row;
+  margin-top: .6rem;
+}
+.account-font-label{
+  font-size: 1.25rem;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  color: white;
+}
+.account-font-input{
+  font-size: .9rem;
+  font-family: "Inter", sans-serif;
+  font-weight: 300;
+}
+
+.account-font-DOB{
+  font-size: .6rem;
+  font-family: "Inter", sans-serif;
+  font-weight: 300;
+  padding-left: 0.1rem ;
+  color: var(--text-gray1);
+}
+.account-font-title{
+  font-size: .9rem;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  color: white;
+}
+.account-font-desc{
+  font-size: .7rem;
+  font-family: "Inter", sans-serif;
+  font-weight: 300;
+  padding-left: 0.1rem ;
+  color: var(--text-gray1);
+}
+
 .account-page{
   height: 100vh;
   background-color: var(--midnight-layer2);
@@ -58,7 +96,7 @@
     color: white;
     display: flex;
     align-items: flex-start;
-
+    padding-left: 2.5rem;
   }
 
   .account-nav-header{
@@ -82,19 +120,93 @@
   /* Account information styling */
 
   .account-info-header{
-    font-size: 1.75rem;
+    font-size: 2rem;
     font-weight: 400;
     padding: .2rem .5rem .2rem .5rem;
-    border-bottom: 1px solid gray ;
-    margin: 1rem 2rem 0rem 2rem;
+    border-bottom: 2px solid white ;
+    margin-top: 1rem;
+    align-self: flex-start;
   }
 
   .account-info-content-row{
     display: flex;
     flex-direction: column;
     margin-left: 1rem ;
+    margin-top: 3rem;
+  }
+  .account-info-content-col{
+    display: flex;
+    flex-direction: row;
+    margin-left: 1rem ;
+    margin-top: 3rem;
+  }
+  .stack-date{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
   .account-info-content-item{
     display: flex;
     align-items: flex-start
+  }
+
+  .input-name{
+    width: 12rem;
+    outline: none;
+    border-radius: 0.2rem;
+    border: solid 2px var(--primary-green);
+    background-color: var(--midnight-layer1) !important;
+    margin: 0.5rem 0rem;
+    padding: 0.3rem;
+  }
+
+  .selector-gender{
+    width: 7rem;
+    outline: none;
+    border: solid 2px var(--primary-green);
+    background-color: var(--midnight-layer1) !important;
+    color: white;
+    padding: 0.2rem;
+    border-radius: 0.2rem;
+  }
+
+  .input-DOB{
+    width: 3.5rem;
+    outline: none;
+    border: solid 2px var(--primary-green);
+    background-color: var(--midnight-layer1) !important;
+    color: white;
+    border-radius: 0.2rem;
+    padding: 0.3rem;
+    margin-right: 0.4rem;
+  }
+
+  /* General specific settings */
+
+  .account-gen-content-item{
+    display: flex;
+    align-items: flex-start;
+    width: 15rem;
+  }
+  .stack-gen-button{
+    display: flex;
+    flex-direction: column;
+  }
+  .account-gen-content-row{
+    display: flex;
+    flex-direction: row;
+    margin-left: 0.5rem ;
+    margin-top: 3rem;
+    width: 24rem;
+    border: 2px solid var(--primary-green);
+    border-radius: 0.5rem;
+    padding: 1rem 0.5rem 1rem 1rem;
+    box-shadow: 0px 3px 6px rgb(0,0,0,0.8);
+  }
+  .gen-icon{
+    display: flex;
+    align-items: center;
+    justify-items: flex-end;
+    padding: 0rem 2rem 0rem 6rem ;
+    font-size: 1.25rem;
   }
