--- a/frontend/src/CustomCalendar.css
+++ b/frontend/src/CustomCalendar.css
@@ -1,11 +1,11 @@
 @keyframes fadeInBottomCalendar {
   0% {
     opacity: 0;
-    transform: translate(5px, 54px);
+    transform: translate(-1rem, 2.7rem);
   }
   100% {
     opacity: 1;
-    transform: translate(5px, 44px);
+    transform: translate(-1rem, 2.5rem);
   }
 }
 
@@ -14,7 +14,7 @@ display: flex;
 position: absolute;
 z-index: 1000;
 background-color: var(--top-gray2);
-transform: translateX(5px) translateY(44px);
+transform: translateX(-1rem) translateY(2.5rem);
 border-radius: 5px;
 animation: fadeInBottomCalendar 0.5s;
 }
