--- a/frontend/src/Timeblock.css
+++ b/frontend/src/Timeblock.css
@@ -66,7 +66,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    max-width: 17rem;
+    max-width: 16rem;
+    min-width: 16rem;
   }
 
   .modal-row-cats {
@@ -79,19 +80,20 @@
     min-height: 20rem;
     max-height: 20rem;
     align-items: flex-start;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
   .modal-header-cats {
     display: flex;
     font-weight: 300;
-    padding: 2px 12px 2px 0px;
+    padding: 0rem 1rem 0rem .6rem;
     border-radius: 5px;
   }
 
   .modal-group-cats {
     width: 240px;
     height: 30px;
-    margin: 0px 10px 15px 0px;
+    margin: 1rem 0.5rem;
+    padding-left: 0.2rem; 
     border-radius: 5px;
   }
   .modal-element-cats {
