--- a/frontend/src/Tasks.css
+++ b/frontend/src/Tasks.css
@@ -101,7 +101,8 @@
   flex-direction: row;
 }
 
-.duedate, .reminder {
+.duedate,
+.reminder {
   padding: 3px 4px;
   margin-right: 0.5rem;
 }
@@ -231,14 +232,14 @@
 /* NEW TASK */
 
 .add-task-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: left;
-    color: white;
-    align-items: flex-start;
-    margin: auto;
-    width: 35%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
+  color: white;
+  align-items: flex-start;
+  margin: auto;
+  width: 35%;
 }
 
 .add-task-form {
@@ -248,25 +249,26 @@
 }
 
 .add-task-container h3 {
-    margin: 0.6rem 0;
-    font-weight: 500;
-    font-size: 1.2rem;
+  margin: 0.6rem 0;
+  font-weight: 500;
+  font-size: 1.2rem;
 }
 
 .add-task-container h2 {
   font-size: 1.3rem;
 }
 
-.add-task-container textarea, .add-task-container input {
-    background-color: var(--mid-gray2);
-    padding: 0.8rem;
-    resize: none;
-    outline: none;
-    border: none;
-    border-radius: 4px;
-    font-family: 'Inter';
-    color: var(--text-gray2);
-    font-size: 0.9rem;
+.add-task-container textarea,
+.add-task-container input {
+  background-color: var(--mid-gray2);
+  padding: 0.8rem;
+  resize: none;
+  outline: none;
+  border: none;
+  border-radius: 4px;
+  font-family: "Inter";
+  color: var(--text-gray2);
+  font-size: 0.9rem;
 }
 
 .add-task-container textarea {
@@ -278,48 +280,48 @@
 }
 
 .add-task-buttons button {
-    padding: 0.4rem 0.5rem;
-    border: none;
-    outline: none;
-    font-size: 1rem;
-    border-radius: 4px;
-    cursor: pointer;
+  padding: 0.4rem 0.5rem;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .add-task-buttons {
-    margin-top: 0.8rem;
+  margin-top: 0.8rem;
 }
 
 .add-task-buttons .cancel {
-    background-color: var(--top-gray);
-    color: var(--text-gray2);
-    border: solid 2px var(--danger);
-    margin-right: 0.4rem;
-    transition: 0.2s ease-in-out;
+  background-color: var(--top-gray);
+  color: var(--text-gray2);
+  border: solid 2px var(--danger);
+  margin-right: 0.4rem;
+  transition: 0.2s ease-in-out;
 }
 
 .add-task-buttons .cancel:hover {
-    background-color: var(--danger);
+  background-color: var(--danger);
 }
 
 .add-task-buttons .submit {
-    background: var(--button);
-    color: white;
-    transition: 0.2s ease-in-out;
+  background: var(--button);
+  color: white;
+  transition: 0.2s ease-in-out;
 }
 
 .add-task-buttons .submit:hover {
-    background: var(--button-hover);
+  background: var(--button-hover);
 }
 
 .is-editing .add-task-container {
-    background-color: var(--top-gray2);
-    padding: 1.2rem;
-    margin: 0.8rem;
-    border-radius: 8px;
+  background-color: var(--top-gray2);
+  padding: 1.2rem;
+  margin: 0.8rem;
+  border-radius: 8px;
 }
 
 .task-editor-area {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
