--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1472,7 +1472,7 @@ cursor: pointer;
   position: fixed;
   background-color: var(--mid-gray);
   width: 32rem;
-  height: 21.5rem;
+  height: 19.2em;
   box-shadow: 0px 3px 6px rgb(0, 0, 0, 0.5);
   border-radius: 10px;
   margin-top: 32.5rem;
